2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* custom.el (custom-delayed-init-variables): New var.
	(custom-initialize-delay): New function.
	* startup.el (command-line): "Re"evaluate all vars in
	custom-delayed-init-variables.  Don't reevaluate abbrev-file-name
	explicitly any more.
	* abbrev.el (abbrev-file-name): Use custom-initialize-delay
	to avoid creating a ~/.emacs.d at build-time (bug#4347).

	* proced.el (proced-mode-map): Prefer "m" for proced-mark (bug#4362).

2009-09-11  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-var-update-regexp): Delete.
	(gdb-var-update-handler): Use json parsing.

2009-09-11  Juanma Barranquero  <lekktu@gmail.com>

	* vc-annotate.el (vc-annotate): Use the main file's coding-system to
	decode annotated text, regardless of language environment.  (Bug#2741)

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (autoloads): Make rmail.el writable as well.

2009-09-11  Glenn Morris  <rgm@gnu.org>

	* dired-aux.el, dired-x.el: Put autoloads in dired.el rather than
	loaddefs.el.
	* dired.el: Regenerate with extracted autoloads.
	* Makefile.in (autoloads): Make dired.el writable.

	* ibuf-ext.el: Put autoloads in ibuffer.el rather than loaddefs.el.
	* ibuffer.el: Regenerate with extracted autoloads.
	* Makefile.in (autoloads): Make ibuffer.el writable.

	* paths.el (prune-directory-list, gnus-nntp-service, rmail-file-name):
	* version.el (emacs-copyright, emacs-major-version)
	(emacs-minor-version): Reformat doc-strings for make-docfile.

	* apropos.el (apropos-documentation-check-doc-file): Exclude unbound
	functions and variables, since they must be stuff specific to some other
	platform.
	(apropos-print): Make mouse-click message less specific about button.

	* emacs-lisp/cl-macs.el (define-compiler-macro): Add a property
	that records where a macro was defined.
	* help-fns.el (describe-function-1): Mention if a function has a
	compiler-macro.